laborations/lab1/testsuite/bad/bad054.cc
struct foo {
	int bar ,
        double baz
} ;
